fix made long line rank text visible

--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,10 @@
   grid-template-areas:
       "title"
       "ranking";
+  overflow: visible;
 
   height: 100%;
-  width: 100%;
+  width: 162%;
   /*  background: aliceblue;*/
 }
 
